--- a/.env
+++ b/.env
@@ -1,1 +1,14 @@
+# ------------- DATABASE ----------------
 MONGODB_URL=mongodb+srv://sanjarfayzullaev99:8NpM34jwE7jpiCNl@shoppay-next-js.l6p7hq3.mongodb.net/shoppay?retryWrites=true&w=majority
+# ------------ NEXT AUTH ----------------
+JWT_SECRET=_kD+5s?SELqJU_6#%mFgJS4nBPY!^+xGdgTx3c^F+RmHQR_#8K_jfrCq^ueu
+NEXTAUTH_URL=http://localhost:3000
+# ------------- GITHUB -----------------
+GITHUB_ID=53cf4b08286da0c1e5d3
+GITHUB_SECRET=f41e5e7a993f86e4edb52b176eeb3005e7eadffd
+# ------------- GOOGLE -----------------
+GOOGLE_ID=587601749633-pi4bbr50rd1v8phhndhisldhtt31p12i.apps.googleusercontent.com
+GOOGLE_SECRET=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
+# ------------ FACEBOOK -----------------
+FACEBOOK_ID=627041908923584
+FACEBOOK_SECRET=cadab36b9dbd1e3bc6ff2f1e19e3d9f2
