--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "formik": "^2.2.9",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
     "next": "13.3.4",
+    "next-auth": "^4.22.1",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,6 +28,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "yup": "^1.1.1"
   }
 }
