signup page finished. database connected

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ MONGODB_URL=mongodb+srv://sanjarfayzullaev99:8NpM34jwE7jpiCNl@shoppay-next-js.l6
 # ------------ NEXT AUTH ----------------
 JWT_SECRET=_kD+5s?SELqJU_6#%mFgJS4nBPY!^+xGdgTx3c^F+RmHQR_#8K_jfrCq^ueu
 NEXTAUTH_URL=http://localhost:3000
+BASE_URL=http://localhost:3000
 # ------------- GITHUB -----------------
 GITHUB_ID=53cf4b08286da0c1e5d3
 GITHUB_SECRET=f41e5e7a993f86e4edb52b176eeb3005e7eadffd
@@ -12,3 +13,10 @@ GOOGLE_SECRET=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
 # ------------ FACEBOOK -----------------
 FACEBOOK_ID=627041908923584
 FACEBOOK_SECRET=cadab36b9dbd1e3bc6ff2f1e19e3d9f2
+# ---------- MAILING SERVICE ------------
+MAILING_SERVICE_CLIENT_ID=744481585927-3he6codf03l420d470pq475maajga2cm.apps.googleusercontent.com
+MAILING_SERVICE_CLIENT_SECRET=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
+MAILING_SERVICE_REFRESH_TOKEN=1//04WaHOrb6f4Z1CgYIARAAGAQSNwF-L9Irqug13yPxGmGzQFKi_FfTKwNqY-sWLBJ4mXiulfThgqFuu5Zy5-riYmx0tl89daXBF8o
+SENDER_EMAIL_ADDRESS=sanjarfayzullaev99@gmail.com
+# -------------- JWT --------------------
+ACTIVATION_TOKEN_SECRET=_kD+5s?SEgdgrtygdfghdf6ytryrLqJU_6#%mFgJS4nBPY!^+xGdgTx3c^F+RmHQR_#8K_jfrCq^ueu
