--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "formik": "^2.2.9",
+    "googleapis": "^118.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
     "next": "13.3.4",
     "next-auth": "^4.22.1",
+    "next-connect": "^1.0.0",
     "next-redux-wrapper": "^8.1.0",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
+    "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
