reset password done

--- a/.env
+++ b/.env
@@ -20,3 +20,4 @@ MAILING_SERVICE_REFRESH_TOKEN=1//04WaHOrb6f4Z1CgYIARAAGAQSNwF-L9Irqug13yPxGmGzQF
 SENDER_EMAIL_ADDRESS=sanjarfayzullaev99@gmail.com
 # -------------- JWT --------------------
 ACTIVATION_TOKEN_SECRET=_kD+5s?SEgdgrtygdfghdf6ytryrLqJU_6#%mFgJS4nBPY!^+xGdgTx3c^F+RmHQR_#8K_jfrCq^ueu
+RESET_TOKEN_SECRET=_kD+5s?S54hg6jg45gkjh54gt45hg4jdf6ytryrLqJU_6#%mFgJS4nBPY!^+xGdgTx3c^F+RmHQR_#8K_jfrCq^ueu
